--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         </div>
                     </div>
                     <div class="accordion-item">
-                        <button class="accordion-header">Fatih Anatolian High School (2018-2022)</button>
+                        <button class="accordion-header">Fatih Anadolu High School (2018-2022)</button>
                         <div class="accordion-content">
                             <p>Completed high school education.</p>
                         </div>
